--- a/index.css
+++ b/index.css
@@ -35,7 +35,7 @@ h1, h3, p{
     border-width: 10px;
     border-style: solid;
     border-radius: 5px;
-    border-color: red;
+    border-color: purple;
 
     
 }
