--- a/index.css
+++ b/index.css
@@ -7,36 +7,78 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
 
-/* Set the background color for my page: */
+/* Set the background color for my page: rgb is red green blue and oges up to 255, or just type a randon colour */
 body{
-    background-color: rgb(233, 233, 233);
- 
+    background-color: rgb(200, 200, 200);
 }
 
-
-/* Choose the appearance of the tags, h1, h3 and p: */
-h1, h3, p{
-    color:rgb(17, 17, 17);
+h1, a, p{
+    color:rgb(0, 0, 0);
     font-family: 'Roboto', sans-serif;
     text-align: center;
 }
-    
-.myWeek1{
-    margin: auto;
-    max-width: 600px;
-    background-color: bisque;
-}
 
-
-/* Set the apperance of the class, chart */
-.chart{
-    background-color: rgb(0, 255, 191);
-    width: 360px;
-    border-width: 10px;
+a{
+    border: 5px;
+    border-color: black;
     border-style: solid;
+    text-align: center;
+
+    margin:20px
+}
+
+
+
+#link1{
+    border:1px;
+    border-color:rgb(61, 61, 209);
+    border-style: solid;
+
     border-radius: 5px;
-    border-color: rgb(195, 0, 255);
+    padding: 10px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight:700;
+    color:grey;
+    
+    text-decoration: none;
 
     
 }
+#link1{ display: block;text-align: center;}
+
+#link1:hover{
+
+    background-color: rgba(30, 197, 223, 0.148);
+
+    border:2px;
+    border-color:yellow;
+    border-style: solid;
     
+}
+
+#link2{
+    border:1px;
+    border-color:rgb(61, 61, 209);
+    border-style: solid;
+
+    border-radius: 5px;
+    padding: 10px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight:700;
+    color:grey;
+    
+    text-decoration: none;
+
+}
+
+#link2{ display: block;text-align: center;}
+
+#link2:hover{
+
+    background-color: rgba(30, 197, 223, 0.148);
+
+    border:2px;
+    border-color:yellow;
+    border-style: solid;
+    
+}
