--- a/portfolio.css
+++ b/portfolio.css
@@ -47,6 +47,18 @@ h1, h3, p{
     border-color: rgb(100, 100, 100);
 }
 
+.myWeek3{    
+    margin: auto;
+    max-width: 600px;
+    background-color: rgb(220, 220, 220);
+
+      
+    border-width: 3px;
+    border-style: solid;
+    border-radius: 10px;
+    border-color: rgb(100, 100, 100);
+
+}
 /* Set the apperance of the class, chart */
 .chart{
     background-color: white;
