--- a/index.css
+++ b/index.css
@@ -9,13 +9,20 @@
 
 /* Set the background color for my page: rgb is red green blue and oges up to 255, or just type a randon colour */
 body{
-    background-color: rgb(200, 200, 200);
+    background-color: rgba(95, 174, 239, 0.435);
 }
 
 h1, a, p{
     color:rgb(0, 0, 0);
     font-family: 'Roboto', sans-serif;
     text-align: center;
+    border: 1px;
+    border-radius: 5px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: gray;
+    
+    
 }
 
 a{
@@ -24,10 +31,30 @@ a{
     border-style: solid;
     text-align: center;
 
-    margin:20px
+    margin:10px
 }
 
+.topnav{
+    overflow: hidden;
+    background-color: rgb(121, 196, 233);
+    border-radius: 15px;
+    border-style: solid;
+    border-color: black;
+    display: table;
+    margin: 0 auto;
+    
+    
+}
+.topnav{
+    float: none;
+    color: aqua;
+    text-align: center;
+    padding: 10px 12px;
+    font-size: 15px;
+    width: auto;
 
+
+}
 
 #link1{
     border:1px;
@@ -38,8 +65,7 @@ a{
     padding: 10px;
     font-family: 'Courier New', Courier, monospace;
     font-weight:700;
-    color:grey;
-    
+    color:white;
     text-decoration: none;
 
     
@@ -51,7 +77,7 @@ a{
     background-color: rgba(30, 197, 223, 0.148);
 
     border:2px;
-    border-color:yellow;
+    border-color:black;
     border-style: solid;
     
 }
@@ -65,7 +91,7 @@ a{
     padding: 10px;
     font-family: 'Courier New', Courier, monospace;
     font-weight:700;
-    color:grey;
+    color:white;
     
     text-decoration: none;
 
@@ -78,7 +104,61 @@ a{
     background-color: rgba(30, 197, 223, 0.148);
 
     border:2px;
-    border-color:yellow;
+    border-color:black;
+    border-style: solid;
+    
+}
+
+#link3{
+    border:1px;
+    border-color:rgb(61, 61, 209);
+    border-style: solid;
+
+    border-radius: 5px;
+    padding: 10px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight:700;
+    color:white;
+    
+    text-decoration: none;
+
+}
+
+#link3{ display: block;text-align: center;}
+
+#link3:hover{
+
+    background-color: rgba(30, 197, 223, 0.148);
+
+    border:2px;
+    border-color:black;
+    border-style: solid;
+    
+}
+
+#link4{
+    border:1px;
+    border-color:rgb(61, 61, 209);
+    border-style: solid;
+
+    border-radius: 5px;
+    padding: 10px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight:700;
+    color:white;
+    
+    text-decoration: none;
+
+}
+
+#link4{ display: block;text-align: center;}
+
+#link4:hover{
+
+    background-color: rgba(30, 197, 223, 0.148);
+
+    border:2px;
+    border-color:black;
     border-style: solid;
     
 }
