--- a/portfolio.css
+++ b/portfolio.css
@@ -145,6 +145,22 @@ h3, p{
     
 }
 
+.myWeek9{
+
+    margin: auto;
+    max-width: 910px;
+   background-color: rgb(220, 220, 220);
+   display: block;
+    margin-bottom: 20px;
+         
+   border-width: 3px;
+   border-style: solid;
+   border-radius: 10px;
+   border-color: rgb(100, 100, 100);
+   
+   
+}
+
 /* Set the apperance of the class, chart */
 .chart{
     background-color: rgb(255, 255, 255);
@@ -379,3 +395,32 @@ h3, p{
     
 
 }
+
+#Chart21{
+    background-color: rgb(255, 255, 255);
+    width: 500px;
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 10px;
+    border-color: grey;
+    text-align: center;
+    display: block; 
+    margin: 0 auto;
+    
+
+}
+
+#Chart22{
+    background-color: rgb(255, 255, 255);
+    width: 500px;
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 10px;
+    border-color: grey;
+    text-align: center;
+    display: block; 
+    margin: 0 auto;
+    
+
+}
+
