--- a/portfolio3.css
+++ b/portfolio3.css
@@ -164,9 +164,22 @@ p {
 #chart1 {
     margin: auto 0 auto 0;
     height: 450px;
+    width:370px
 }
 
 #chart2 {
+    margin: auto 0 auto 0;
+    height: 450px;
+    width: 370px;
+}
+
+#chart3 {
+    margin: auto 0 auto 0;
+    height: 450px;
+    width: 380px;
+}
+
+#chart4 {
     margin: auto 0 auto 0;
     height: 450px;
     width: 380px;
@@ -220,8 +233,8 @@ p {
 
 #chart8 {
     margin: auto 0 auto 0;
-    height: 260px;
-    width: 240px;
+    height: 265px;
+    width: 245px;
     border-width: 2px;
     margin-right: 2px;
     margin-bottom: 2px;
@@ -229,8 +242,8 @@ p {
 
 #chart9 {
     margin: auto 0 auto 0;
-    height: 260px;
-    width: 240px;
+    height: 265px;
+    width: 245px;
     border-width: 2px;
     margin-right: 2px;
     margin-bottom: 2px;
@@ -238,8 +251,8 @@ p {
 
 #chart10 {
     margin: auto 0 auto 0;
-    height: 260px;
-    width: 240px;
+    height: 265px;
+    width: 245px;
     border-width: 2px;
     margin-right: 2px;
     margin-bottom: 2px;
@@ -247,8 +260,8 @@ p {
 
 #chart11 {
     margin: auto 0 auto 0;
-    height: 260px;
-    width: 240px;
+    height: 265px;
+    width: 245px;
     border-width: 2px;
     margin-right: 2px;
     margin-bottom: 2px;
@@ -256,8 +269,8 @@ p {
 
 #chart12 {
     margin: auto 0 auto 0;
-    height: 260px;
-    width: 240px;
+    height: 265px;
+    width: 245px;
     border-width: 2px;
     margin-right: 2px;
     margin-bottom: 2px;
@@ -265,8 +278,8 @@ p {
 
 #chart13 {
     margin: auto 0 auto 0;
-    height: 260px;
-    width: 240px;
+    height: 265px;
+    width: 245px;
     border-width: 2px;
     margin-right: 2px;
     margin-bottom: 2px;
@@ -274,8 +287,8 @@ p {
 
 #chart14 {
     margin: auto 0 auto 0;
-    height: 260px;
-    width: 240px;
+    height: 265px;
+    width: 245px;
     border-width: 2px;
     margin-right: 2px;
     margin-bottom: 2px;
@@ -283,8 +296,8 @@ p {
 
 #chart15 {
     margin: auto 0 auto 0;
-    height: 260px;
-    width: 240px;
+    height: 265px;
+    width: 245px;
     border-width: 2px;
     margin-right: 2px;
     margin-bottom: 2px;
@@ -292,8 +305,8 @@ p {
 
 #chart16 {
     margin: auto 0 auto 0;
-    height: 260px;
-    width: 240px;
+    height: 265px;
+    width: 245px;
     border-width: 2px;
     margin-right: 2px;
     margin-bottom: 2px;
@@ -301,44 +314,44 @@ p {
 
 #chart17 {
     margin: auto 0 auto 0;
-    height: 580px;
-    width: 560px;
+    height: 440px;
+    width: 410px;
 }
 
 #chart18 {
     margin: auto 0 auto 0;
-    height: 600px;
-    width: 690px;
+    height: 410px;
+    width: 505px;
 }
 
 #chart19 {
     margin: auto 0 auto 0;
     height: 400px;
-    width: 490px;
+    width: 430px;
 }
 
 #chart20 {
     margin: auto 0 auto 0;
     height: 400px;
-    width: 490px;
+    width: 430px;
 }
 
 #chart21 {
     margin: auto 0 auto 0;
     height: 460px;
-    width: 520px;
+    width: 390px;
 }
 
 #chart22 {
     margin: auto 0 auto 0;
     height: 460px;
-    width: 520px;
+    width: 400px;
 }
 
 #chart23 {
     margin: auto 0 auto 0;
     height: 460px;
-    width: 520px;
+    width: 460px;
 }
 
 
