--- a/project.css
+++ b/project.css
@@ -214,9 +214,16 @@ p {
     font-size: 10pxp;
 }
 
+#chart25 {
+    margin: auto 0 auto 0;
+    height: 450px;
+    width: 510px;
+}
+
 #chart26 {
     margin: auto 0 auto 0;
     height: 500px;
+    width: 550px;
 }
 
 #chart27 {
@@ -225,17 +232,17 @@ p {
 }
 
 #chart28 {
-    width: 500px;
+    width: 490px;
 }
 
 #chart29 {
     height: 480px;
-    width: 580px;
+    width: 550px;
 }
 
 #chart30 {
-    width: 830px;
-    height: 420px;
+    width: 490px;
+    height: 820px;
 }
 
 #chart31 {
